--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         if (a <= 0 || b <= 0) {
             document.getElementById('result').textContent = '  неправильный катет'
+            return;
         }
 
         const hyp = Math.sqrt(a * a + b * b);
