--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
 
         if (a <= 0 || b <= 0) {
-            document.getElementById('result').textContent = '  неправильный катет'
+            document.getElementById('result').textContent = '  неправильный катет';
             return;
         }
 
